--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,62 +1,139 @@
 {% load staticfiles %}
 <html>
+
+
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'css/myblog.css' %}">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <script src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
+    <script src="{% static 'js/base.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/emacs.css' %}">
-    <title>Li's Django Blog</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a simple django blog!">
+	<title>li,s django blog</title>
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="A blog for study of Python-Django, H.265/HEVC, depth map and image processing.">
+
     <style type="text/css">
         .fixed_div{
         position:fixed;
         right:100px;
         bottom:100px;
+{#        width:20px;#}
+{#        height: 20px;#}
         }
-    </style>
-
+    </style>	
 </head>
+
+
 <body>
+<div id="container">
     <div class="page-header">
-    <div class="row">
-        <div style="float: left" > <h1><a href="/">Li's Django Blog</a></h1></div>
-        <div style="float: right">
-            <li>
-                <form class="pure-form" action="/search/" method="get">
-                 <input class="pure-input-3-3" type="text" name="s" placeholder="搜索"></form>
-            </li>
-            <ul class="nav nav-pills">
-                <li class="active"><a href="{% url 'about_me' %}"><span class="glyphicon glyphicon-user"></span> 关于</a></li>
-                {% if user.is_authenticated %}
-                    <li class="active"><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-pencil"></span> 新建</a></li>
-                    <li class="active"><a href="{% url 'archives' %}"><span class="glyphicon glyphicon-briefcase"></span> 归档</a></li>
-                    <li class="active"><a href="{% url 'post_draft_list' %}"><span class="glyphicon glyphicon-th-list"></span> 草稿箱</a></li>
-                    <li class="active"><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-circle-arrow-down"></span> 注销</a></li>
-                {% else %}
-                    <li class="active"><a href="{% url 'login' %}"><span class="glyphicon glyphicon-circle-arrow-up"></span>登录</a></li>
-                    <li class="active"><a href="{% url 'register' %}"><span class="glyphicon glyphicon-circle-arrow-up"></span>注册</a></li>
-                {% endif %}
-            </ul>
-        </div>
-       </div>
-    </div>
-    <div class="content">
         <div class="row">
-            <div class="col-md-8">
-                {% block content %}
-                    <div class="post">
-                        <h1><a href="">{{ post.title }}</a></h1>
-                        <p>published: {{ post.published_date }}</p>
-                        <p>{{ post.text|linebreaks }}</p>
-                    </div>
-                {% endblock %}
+            <div style="float: left" > <h1><a href="/">li's django blog</a></h1></div>
+            <div style="float: right">
+                <ul class="nav nav-pills">
+                    <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span> 首页</a></li>
+                    <li class="active"><a href="{% url 'archives' %}"><span class="glyphicon glyphicon-briefcase"></span> 归档</a></li>
+                    <li class="active"><a href="{% url 'about_me' %}"><span class="glyphicon glyphicon-user"></span> 关于</a></li>
+
+                    {% if user.is_authenticated %}
+                        <li class="active"><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-pencil"></span> 新建</a></li>
+                        <li class="active"><a href="{% url 'post_draft_list' %}"><span class="glyphicon glyphicon-th-list"></span> 草稿箱</a></li>
+                        <li class="active"><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-circle-arrow-down"></span> 注销</a></li>
+                    {% else %}
+                        <li class="active"><a href="{% url 'login' %}"><span class="glyphicon glyphicon-circle-arrow-up"></span> 登录</a></li>
+                    {% endif %}
+                </ul>
+
+{#            <a href="/" class="btn btn-primary">首页</a>#}
+{#            <a href="{% url 'archives' %}" class="btn btn-primary">归档</a>#}
+{#            <a href="http://weibo.com/2365395711/" class="btn btn-primary">微博</a>#}
+{#            <a href="https://www.facebook.com/yukim.yuan" class="btn btn-primary">Facebook</a>#}
+{#            <a href="{% url 'about_me' %}" class="btn btn-primary">Aboutme</a>#}
+
+{#            {% if user.is_authenticated %}#}
+{#                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>#}
+{#                    <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>#}
+{#                    <p class="top-menu">Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>#}
+{#            {% else %}#}
+{#                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>#}
+{#            {% endif %}#}
             </div>
         </div>
     </div>
-</body>
-</html>
 
+    <div class="content container" style="width: 100%">
+        <div class="row">
+            <div class="col-md-10">
+            {% block content %}
+            {% endblock %}
+            </div>
+
+            <div class="col-md-2">
+{#                <div style="height:100%;border-left-color:#b4b4b4; border-left-style:solid; border-left-width:1px;">#}
+                    <div>
+                        <form class="pure-form" action="/search/" method="get">
+                            <input class="pure-input-3-3" type="text" name="s" placeholder="search" style="height: 30px; margin: auto;">
+                        </form>
+                    </div>
+                    <br><br>
+
+                    <div>
+                        <p>&nbsp&nbsp&nbsp&nbsp<strong><span class="glyphicon glyphicon-star-empty"></span> 标签分类</strong></p>
+                        <DIV style="BORDER-TOP: #d2d2d2 1px solid; OVERFLOW: hidden; HEIGHT: 1px"></DIV>
+                        <ul>
+                        {% for x in tags %}
+                            <li class="post-category post-category-js">
+                                <a href="{% url 'search_tag' tag=x %}">{{ x|title }}</a><font color="#a9a9a9"> ({{tags}})</font>
+                            </li>
+                        {% endfor %}
+                        </ul>
+                    </div>
+                    <br><br>
+                    <div>
+                        <p>&nbsp&nbsp&nbsp&nbsp<strong><span class="glyphicon glyphicon-time"></span> 日期存档</strong></p>
+                        <DIV style="BORDER-TOP: #d2d2d2 1px solid; OVERFLOW: hidden; HEIGHT: 1px"></DIV>
+                        <ul>
+                        {% for d in date_list %}
+                            <li class="post-category post-category-js">
+                                <a href="{% url 'date_archives' y=d.0 m=d.1 %}">{{ d.0 }}年{{ d.1 }}月</a>
+                                <font color="#a9a9a9"> ({{d.2}})</font>
+                            </li>
+                        {% endfor %}
+                        </ul>
+                    </div>
+{#                </div>#}
+            </div>
+        </div>
+    </div>
+
+	<div class="fixed_div">
+        <a id="gotop" href="#" onclick="MGJS.goTop();return false;">
+            <button type="button" class="btn btn-default btn-lg" style="font-size: 20px">
+                <span class="glyphicon glyphicon-arrow-up"></span>
+            </button>
+        </a>
+    </div>
+</div>
+
+
+
+    <div class="col-md-10">
+        <div id="footer">
+            <div id="copyright">
+                版权所有 © 2017 <a href="https://www.lfbeyond.com">li's</a>
+            </div>
+        </div>
+    </div>
+
+</body>
+
+
+</html>
