--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -6,14 +6,14 @@
                 {{ post.published_date |date:'m, d, Y'}}
             </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>作者： <a class="post-category post-category-js" href="{% url 'search_user' user_id=post.user.id %}">{{ post.user }}</a></p>
-            <p>
-                {% if post.category %}
+            <p>  <a>作者 ：</a>  <a class="post-category post-category-js" href="{% url 'search_user' user_id=post.user.id %}">{{ post.user }}</a>
+            </p>    
+         	{% if post.category %}
                     <a class="post-category post-category-js" href="{% url 'search_tag' tag=post.category %}">
                     <span class="glyphicon glyphicon-tag"></span>{{ post.category|title }}</a>
                 {% endif %}
-            </p>
-            <p>{{ post.text|safe|linebreaks|truncatewords:5 }}</p>
+            <!--{{ post.text |safe |linebreaks|truncatewords:5  }}-->
+            <p>{{ post.text |safe |linebreaks|truncatewords:5  }}</p>
             <a class="pure-button" href="{% url 'post_detail' pk=post.pk %}">Read More >>> </a>
         </div>
     {% endfor %}
@@ -35,12 +35,12 @@
             {% endif %}
         </span>
     </div>
-    <div class="fixed_div">
-        <a id="gotop" href="#" onclick="goTop();return false;">
-            <button type="button" class="btn btn-default btn-lg" style="font-size: 20px">
-                <span class="glyphicon glyphicon-arrow-up"></span>
-            </button>
-        </a>
-    </div>
-{% endif %}
+    {% endif %}
+
+
+
+
+
+
+
 {% endblock content %}
